# Model-Context-Protocol

./: app.py  constant.py  https_client.py  main.py  pyproject.toml
data/: sample.csv  sample.parquet
mcp_client/: client.py  prompts.py
tools/: csv_tools.py  parquet_tools.py  stock_price_tool.py
utils/: file_reader.py  tool_utils.py
