[project]
name = "mix-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "mcp[cli]>=1.9.1",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]
